完成confirm组件的开发

--- a/packages/components/src/confirm/style/index.module.less
+++ b/packages/components/src/confirm/style/index.module.less
@@ -1,3 +1,5 @@
+@import '../../assets/styles/variables.less';
+
 .xtx-confirm {
   position: fixed;
   left: 0;
@@ -34,7 +36,7 @@
       padding: 20px 40px;
       font-size: 16px;
       .icon-warning {
-        color: $priceColor;
+        color: @priceColor;
         margin-right: 3px;
         font-size: 16px;
       }
