feat: 组件开发基本完成

--- a/packages/components/src/assets/styles/variables.less
+++ b/packages/components/src/assets/styles/variables.less
@@ -1,10 +1,39 @@
 // 主题
-@webshopColor:#27BA9B;
+@themeColor: #27ba9b;
+
 // 辅助
-@helpColor:#E26237;
+@helpColor: #e26237;
+
 // 成功
-@sucColor:#1DC779;
+@success: #1dc779;
 // 警告
-@warnColor:#FFB302;
-// 价格
-@priceColor:#CF4444;
+@warning: #ffb302;
+// 危险
+@danger: #f56c6c;
+// 信息
+@info: #909399;
+// 普通
+@primary: #409eff;
+
+// 主要字体颜色
+@majorFontColor: #303133;
+// 常规字体颜色
+@regularFontColor: #606266;
+// 次要字体颜色
+@minorFontColor: #909399;
+// 占位字体颜色
+@placeholderFontColor: #c0c4cc;
+
+// 实边框粗细
+@solidBorderWidth: 1px;
+// 空边框粗细
+@emptyBorderWidth: 2px;
+// 圆角大小
+@radiusNoSize: 0px;
+@radiusSmall: 2px;
+@radiusBig: 4px;
+// 边框颜色
+@borderColor: #dcdfe6;
+
+// 阴影颜色
+@shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.1);
