--- a/packages/components/src/button/style/index.module.less
+++ b/packages/components/src/button/style/index.module.less
@@ -2,11 +2,16 @@
 
 @import '../../assets/styles/variables.less';
 
+.plain(@color) {
+  --lowColor: lighten(@color, 30%);
+  background-color: var(--backgroud-color, --lowColor);
+  color: @color;
+}
+
 .ec-button {
   appearance: none;
   border: none;
   outline: none;
-  background: #fff;
   text-align: center;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -49,15 +54,15 @@
 }
 .default {
   border-color: @borderColor;
-  color: @regularFontColor;
+  color: @majorFontColor;
+  background: var(--backgroud-color, #fff);
 }
 .primary {
   border-color: @primary;
   background: @primary;
   color: #fff;
   &.plain {
-    background: lighten(@primary, 30%);
-    color: @primary;
+    .plain(@primary);
   }
 }
 .success {
@@ -65,8 +70,7 @@
   background: @success;
   color: #fff;
   &.plain {
-    background: lighten(@success, 30%);
-    color: @success;
+    .plain(@success);
   }
 }
 .warning {
@@ -74,8 +78,7 @@
   background: @warning;
   color: #fff;
   &.plain {
-    background: lighten(@warning, 30%);
-    color: @warning;
+    .plain(@warning);
   }
 }
 .error {
@@ -83,8 +86,7 @@
   background: @danger;
   color: #fff;
   &.plain {
-    background: lighten(@danger, 30%);
-    color: @danger;
+    .plain(@danger);
   }
 }
 .info {
@@ -92,8 +94,7 @@
   background: @info;
   color: #fff;
   &.plain {
-    background: lighten(@info, 30%);
-    color: @info;
+    .plain(@info);
   }
 }
 
